remove yellow border

--- a/css/agency.css
+++ b/css/agency.css
@@ -104,8 +104,9 @@ img::-moz-selection {
 }
 
 .btn-primary:active, .btn-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
+  /*-webkit-box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
   box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
+*/
 }
 
 #mainNav {
