--- a/css/msl.css
+++ b/css/msl.css
@@ -7,3 +7,12 @@
 .portfolio-item:hover {
     transform: scale(1.2);    
 }
+
+.img {
+    max-width:100%;
+    height:100px;
+    margin: 3px;
+    background-size:contain;
+    background-position:center center;
+    background-repeat: no-repeat;
+}
