--- a/css/agency.css
+++ b/css/agency.css
@@ -243,7 +243,7 @@ header.masthead .intro-text .intro-heading {
  }
 
  #portfolio .portfolio-item .portfolio-icon .icon .icon-first {
-    color: #DAAD86 !important;
+    color: #d98100 !important;
  }
 
  #portfolio .portfolio-item .portfolio-icon:hover .icon .icon-first,
