--- a/css/agency.css
+++ b/css/agency.css
@@ -421,6 +421,7 @@ header.masthead .intro-text .intro-heading {
   position: relative;
   padding: 0;
   list-style: none;
+  margin-left: 10px;
 }
 
 .timeline:before {
@@ -567,7 +568,7 @@ header.masthead .intro-text .intro-heading {
     min-height: 150px;
   }
   .timeline > li .timeline-panel {
-    padding: 0 20px 20px;
+    padding: 20px 20px 20px;
   }
   .timeline > li .timeline-image {
     width: 150px;
@@ -580,7 +581,7 @@ header.masthead .intro-text .intro-heading {
     margin-top: 30px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 20px 20px;
+    padding: 15px 20px 20px;
   }
 }
 
@@ -589,7 +590,7 @@ header.masthead .intro-text .intro-heading {
     min-height: 170px;
   }
   .timeline > li .timeline-panel {
-    padding: 0 20px 20px 100px;
+    padding: 40px 20px 20px 100px;
   }
   .timeline > li .timeline-image {
     width: 170px;
@@ -600,7 +601,7 @@ header.masthead .intro-text .intro-heading {
     margin-top: 40px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 100px 20px 20px;
+    padding: 40px 100px 20px 20px;
   }
 }
 
@@ -650,7 +651,7 @@ section#contact .form-group input.form-control {
 }
 
 section#contact .form-group textarea.form-control {
-  height: 248px;
+  height: 339px;
 }
 
 section#contact .form-control:focus {
