--- a/css/msl.css
+++ b/css/msl.css
@@ -31,6 +31,7 @@ a:hover {
     transform-style: preserve-3d;
     transform: rotateX(-90deg);
     transition: transform 1s;
+    font-size: x-large;
 }
 
 
