--- a/css/msl.css
+++ b/css/msl.css
@@ -78,6 +78,11 @@ header.masthead{
     padding: 20px;
 
 }
+
+#portfolio .portfolio-item .portfolio-icon .icon .icon-first{
+    color: #68ace3 !important;
+}
+
 .icon-placer:hover{
     border-color: #68ace3;
 
@@ -90,4 +95,27 @@ header.masthead{
     line-height: 80px;
     font-size: 4em;
 
+}
+
+
+/*Changes */
+/*Services */
+
+.color-blue{
+    color: #007bff !important;
+}
+
+.color-red{
+    color: #dc3545 !important;
+}
+
+.color-green{
+    color: #28a745 !important;
+}
+
+h2{
+    color: #68ace3
+}
+.section-subheading{
+    font-size: 18px!important;
 }
