--- a/css/msl.css
+++ b/css/msl.css
@@ -139,3 +139,14 @@ h2{
 .portfolio-modal .privacy li{
     font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.img-top{
+    margin-top: -25px;
+    margin-bottom: -25;
+    margin-bottom: -35px;
+}
+
+.img-center{
+    width: 100%;
+    margin-bottom: -20vh;
+}
