--- a/css/msl.css
+++ b/css/msl.css
@@ -63,7 +63,7 @@ header.masthead{
     top: -100%;
     width: 100vw;
     height: 100%;
-    color: blueviolet;
+    color:  #68ace3;
 }
 
 .icon-placer{
