--- a/css/agency.css
+++ b/css/agency.css
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #68ace3 !important;
+  color: #17b6fb !important;
 }
 
 h1,
@@ -48,10 +48,10 @@ h6 {
 .page-section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
-  font-style: italic;
   margin-bottom: 75px;
   text-transform: none;
-  font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: bold;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'
 }
 
 @media (min-width: 768px) {
@@ -93,8 +93,8 @@ img::-moz-selection {
 }
 
 .btn-primary {
-  background-color: #68ace3;
-  border-color: #68ace3;
+  background-color: #17b6fb;
+  border-color: #17b6fb;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
@@ -120,12 +120,12 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #68ace3;
+  background-color: #17b6fb;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #68ace3;
+  color: #17b6fb;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -144,7 +144,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #68ace3;
+  color: #17b6fb;
 }
 
 @media (min-width: 992px) {
@@ -703,7 +703,7 @@ section#contact :-ms-input-placeholder {
 }
 
 ul.social-buttons {
-  margin-bottom: 0;
+  margin-top: 10px;
 }
 
 ul.social-buttons li a {
